--- a/main.html
+++ b/main.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+<!--   <title>Semantic Navbar & Images</title> -->
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+<nav>
+  <ul>
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About us</a></li>
+    <li><a href="#contact">Contact us</a></li>
+  </ul>
+</nav>
+
+<h3> 3 random images</h3>
+<ol>
+	<li>
+		<img src="https://picsum.photos/id/123/200/300" alt="random image 1">
+	</li>
+	<li>
+		
+        <img src="https://picsum.photos/id/124/200/300" alt="random image 2">
+
+	</li>
+	<li>
+		
+         <img src="https://picsum.photos/id/125/200/300" alt="random image 3">
+
+	</li>
+
+</ol>
 
 </body>
-
 </html>
